<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Solar Mobilis</string>
    <string name="action_settings">Settings</string>
    <string name="user">Usuário</string>
    <string name="password">Senha</string>
    <string name="login">Login</string>
    <string name="title_activity_main">MainActivity</string>
    <string name="title_activity_gateway">GatewayActivity</string>
    <string name="title_activity_curriculum_units_list">Cursos</string>
    <string name="logo_description">Imagem logo do solar</string>
    <string name="iuvi_footer">Instituto Universidade Virtual - 2014</string>
    <string name="logout">Logout</string>
    <string name="courses_title">Cursos disponiveis</string>
    <string name="refresh">Atualizar</string>
    <string name="config">Configurações</string>
    <string name="ALERT_WAIT">Aguarde</string>
    <string name="ALERT_RESPONSE">Recebendo Resposta</string>
    <string name="EMPTY_FIELD">Por favor, informe Usuário e Senha</string>
    <string name="ERROR_AUTHENTICATION">Usuário ou senha inválidos</string>
    <string name="ERROR_CONECTION">Erro de conexão</string>
    <string name="ERROR_WHILE_PLAYING_ATTACH">Erro ao tocar anexo</string>
    <string name="ERROR_AUDIO_DOWNLOAD">Erro ao acessar áudio</string>
    <string name="ERROR_TIMEOUT">Tempo limite de conexão atingido</string>
    <string name="ERROR_UNKNOWN">Erro desconhecido</string>
    <string name="ERROR_SERVER">Ocorreu um erro no servidor</string>
    <string name="ERROR_ADDRESS">Endereço não encontrado</string>
    <string name="ERROR_NO_CONECTION">Falha na conexão</string>
    <string name="title_activity_groups_list">Turmas</string>
    <string name="groups_title">Turmas disponiveis</string>
    <string name="discussions_title">Fóruns disponiveis</string>
    <string name="title_activity_discussion_list">Fóruns</string>
    <string name="title_activity_discussions_posts">Postagens</string>
    <string name="play">Play</string>
    <string name="next">Next</string>
    <string name="prev">Prev</string>
    <string name="stop">Stop</string>
    <string name="temp_description">to delete</string>
    <string name="not_loaded_posts_count">postagens</string>
    <string name="nick_name">João da Silva Ferreira</string>
    <string name="locale_date_format">dd/MM/yyyy</string>
    <string name="sample_text">Tela de Posts para cada item. Exemplo de mensagem de usuário</string>
    <string name="reply">responder</string>
    <string name="action_expand">Expandir post</string>
    <string name="action_playback">Tocar post</string>
    <string name="action_favorite">Favoritar post</string>
    <string name="action_reply">Responder post</string>
    <string name="action_delete">Deletar post</string>
    <string name="action_info">Ver detalhes do post</string>
    <string name="title_activity_response">Enviar novo post</string>
    <string name="submit">Enviar</string>
    <string name="edit_text_Response">Corpo da mensagem</string>
    <string name="listen_to">Ouvir</string>
    <string name="x">X</string>
    <string name="record_image_description">Imagem que indica que há gravação de áudio</string>
    <string name="char_count_default_value">0</string>
    <string name="recod_button_description">Gravar comentário</string>
    <string name="play_button_description">Ouvir gravação</string>
    <string name="counter_default_value">00:00</string>
    <string name="send_post_sucess">Post enviado</string>
    <string name="dialog_wait">Aguarde</string>
    <string name="dialog_message">Recebendo resposta</string>
    <string name="dialog_sending">Enviando</string>
    <string name="post_list_last">Última postagem da lista</string>
    <string name="post_list_first">Primeira postagem da lista</string>
    <string name="image_audio_description">Imagem que indica que um áudio está sendo exibido</string>
    <string name="recording_date">Data da Gravação</string>
    <string name="recording_progress_teste">00:00/00:15</string>
    <string name="recording_duration">duração</string>
    <string name="button_pause_blue_description">Imagem do botão de pause</string>
    <string name="stop_button_description">Imagem do botão stop</string>
    <string name="divider_line">Linha divisória</string>
    <string name="delete">Deletar</string>
    <string name="empyt_field_response">Escreva uma mensagem</string>
    <string name="record_on">Gravando</string>
    <string name="record_off">Gravação concluida</string>
    <string name="audio_attachment">[Áudio anexo]</string>
    <string name="audio_deleted">Arquivo deletado</string>
    <string name="closed_discussion_message">O fórum está encerrado</string>
    <string name="remain_logged_in">Continuar conectado</string>
    <string name="not_allow_direct_response">Essa postagem não permite resposta direta!</string>
	<string name="post_delete">Post excluido</string>
    
</resources>