<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" 
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item
        android:id="@+id/menu_logout"
        android:icon="@drawable/ic_menu_logout"
        android:orderInCategory="3"
        app:showAsAction="never"
        android:title="@string/logout"/>
    <item
        android:id="@+id/menu_refresh"
        android:icon="@drawable/ic_menu_refresh"
        android:orderInCategory="1"
        app:showAsAction="never"
        android:title="@string/refresh"/>
    <item
        android:id="@+id/menu_config"
        android:icon="@drawable/ic_menu_config"
        android:orderInCategory="2"
        app:showAsAction="never"
        android:title="@string/config"/>

</menu>
