<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:background="@color/white">

    <View
        android:id="@+id/action_bar_footer"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@color/yellow_hightlight" />

    <TextView
        android:id="@+id/forum_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textStyle="bold"
        android:textAllCaps="true"
        android:layout_below="@id/action_bar_footer"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="8dp"
        android:textColor="@color/text_white_color"
        android:textSize="14sp" />

    <TextView
        android:id="@+id/forum_range"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@id/forum_title"
        android:layout_below="@id/forum_title"
        android:layout_marginBottom="8dp"
        android:textColor="@color/text_white_color"
        android:textSize="14sp" />

    <ListView
        android:id="@+id/listViewDiscussionsPosts"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/footer"
        android:layout_below="@+id/forum_range"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:cacheColorHint="@android:color/white"
        android:divider="@color/list_divider"
        android:dividerHeight="1dp" >
    </ListView>

    <View
        android:id="@+id/top_divider"
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_above="@id/listViewDiscussionsPosts"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"
        android:alpha="0.5"
        android:background="@color/list_divider" />

    <RelativeLayout
        android:id="@+id/footer"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@android:color/black"
        android:gravity="center_horizontal" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >

            <ImageButton
                android:id="@+id/button_prev"
                style="?android:attr/borderlessButtonStyle"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/playback_bar_selector"
                android:contentDescription="@string/prev"
                android:src="@drawable/playback_previous"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/button_play"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/playback_bar_selector"
                android:contentDescription="@string/play"
                android:src="@drawable/playback_play"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/button_stop"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/playback_bar_selector"
                android:contentDescription="@string/stop"
                android:src="@drawable/playback_stop"
                android:visibility="gone" />

            <ImageButton
                android:id="@+id/button_next"
                android:layout_width="60dp"
                android:layout_height="60dp"
                android:layout_weight="1"
                android:background="@drawable/playback_bar_selector"
                android:contentDescription="@string/next"
                android:src="@drawable/playback_next"
                android:visibility="gone" />
        </LinearLayout>
    </RelativeLayout>

</RelativeLayout>